--- a/css/style.css
+++ b/css/style.css
@@ -63,23 +63,28 @@ h1 {
 }
 
 #logInArea {
-  display: inline-block;
-  width: 72px;
-  height: 72px;
   grid-row-start: 1;
   grid-row-end: 2;
-  grid-column-start: 8;
+  grid-column-start: 7;
   grid-column-end: 9;
+  padding: .75rem;
+  text-align: right;
+}
+
+#logInArea a{
+  padding: 0 .75rem;
 }
 
 #bookshelf {
   display: block;
-  padding: 8px;
-  width: 72px;
-  height: 72px;
   margin: auto;
   grid-row-start: 2;
   grid-column-start: 7;
+}
+#bookshelf img {
+  padding: 8px;
+  width: 72px;
+  height: 72px;
 }
 
 #book-icon {
