--- a/css/sign-in.css
+++ b/css/sign-in.css
@@ -2,20 +2,20 @@ main {
   padding: 5rem;
 }
 main div {
-  border: 4px solid #443730;
+  border: .2rem solid #443730;
+  border-radius: 10px;
   padding: 8rem;
   height: 32rem;
   text-align: center;
   font-size: 1.4rem;
-  /* line-height: 5rem; */
+}
+input, div button {
+  height: 2.5rem;
+  font-size: 1.4rem;
+  margin: 1.5rem;
+  border: .2rem solid #443730;
+  border-radius: 10px;
 }
 input {
-  height: 2.5rem;
-  font-size: 1.4rem;
-  margin: 1.5rem;
-}
-div button {
-  font-size: 1.4rem;
-  height: 2.5rem;
-  margin: 1.5rem;
+  width: 25rem;
 }
