--- a/css/browse.css
+++ b/css/browse.css
@@ -18,6 +18,7 @@
 .card {
   margin: 1rem;
   border: .5rem double #550c18;
+  border-radius: 10px;
   display: grid;
   grid-template: 1fr auto auto 3.5rem/ 1fr;
   text-align: center;
